@@ -1,5 +1,11 @@
 2006-08-20 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* include/Win_GParted.h,
+	  src/Win_GParted.cc: replaced hardcoded menu and toolbar indices with
+	  variables. This is far more flexible and reliable.
+
+2006-08-20 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/GParted_Core.h,
 	  src/GParted_Core.cc: fixed some issues with combi move+shrink on
 	  fat* and hfs* filesystems. 
